--- a/iOS/airbnb/airbnb/Base.lproj/Main.storyboard
+++ b/iOS/airbnb/airbnb/Base.lproj/Main.storyboard
@@ -70,9 +70,9 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="QJE-ny-9yc">
-                                <rect key="frame" x="0.0" y="138" width="414" height="724"/>
+                                <rect key="frame" x="0.0" y="138" width="414" height="508"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="6Dy-x9-InE">
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="5" minimumInteritemSpacing="0.0" id="6Dy-x9-InE">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -153,27 +153,55 @@
                                     <constraint firstAttribute="height" constant="50" id="zE7-cR-Ljj"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u3w-dV-v7r">
+                                <rect key="frame" x="0.0" y="646" width="414" height="250"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="250" id="VNV-Pg-zgG"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="9w1-N1-0o6"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="QJE-ny-9yc" firstAttribute="leading" secondItem="9w1-N1-0o6" secondAttribute="leading" id="1ap-ad-yeu"/>
                             <constraint firstItem="9w1-N1-0o6" firstAttribute="trailing" secondItem="NtB-9q-n2a" secondAttribute="trailing" id="Ahu-av-TXg"/>
-                            <constraint firstItem="9w1-N1-0o6" firstAttribute="bottom" secondItem="QJE-ny-9yc" secondAttribute="bottom" id="Gj2-yS-tKu"/>
+                            <constraint firstItem="u3w-dV-v7r" firstAttribute="top" secondItem="QJE-ny-9yc" secondAttribute="bottom" id="GIZ-8D-7Cg"/>
+                            <constraint firstItem="9w1-N1-0o6" firstAttribute="trailing" secondItem="u3w-dV-v7r" secondAttribute="trailing" id="Ibk-DM-pV0"/>
                             <constraint firstItem="QJE-ny-9yc" firstAttribute="top" secondItem="NtB-9q-n2a" secondAttribute="bottom" id="LRH-ed-JdQ"/>
                             <constraint firstItem="9w1-N1-0o6" firstAttribute="trailing" secondItem="QJE-ny-9yc" secondAttribute="trailing" id="TTc-Me-Vg2"/>
                             <constraint firstItem="NtB-9q-n2a" firstAttribute="top" secondItem="9w1-N1-0o6" secondAttribute="top" id="YRY-vY-1xO"/>
                             <constraint firstItem="NtB-9q-n2a" firstAttribute="leading" secondItem="9w1-N1-0o6" secondAttribute="leading" id="fVd-FP-tQV"/>
+                            <constraint firstItem="u3w-dV-v7r" firstAttribute="leading" secondItem="9w1-N1-0o6" secondAttribute="leading" id="gtj-Nf-tYd"/>
+                            <constraint firstAttribute="bottom" secondItem="u3w-dV-v7r" secondAttribute="bottom" id="uHi-I4-k0w"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="T0f-Iv-Wh4"/>
                     <connections>
+                        <outlet property="bottomSection" destination="u3w-dV-v7r" id="hho-eq-1Iw"/>
                         <outlet property="calendarCollectionView" destination="QJE-ny-9yc" id="Laf-EZ-Ihe"/>
+                        <segue destination="hUm-ws-Rez" kind="show" identifier="PriceViewControllerSegue" id="bpl-QY-hV4"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ysU-4q-N19" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2724.6376811594205" y="118.52678571428571"/>
+        </scene>
+        <!--Price View Controller-->
+        <scene sceneID="M67-IE-g0E">
+            <objects>
+                <viewController storyboardIdentifier="PriceViewController" id="hUm-ws-Rez" customClass="PriceViewController" customModule="airbnb" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="aZG-kN-ti7">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="ML8-kZ-y4C"/>
+                        <color key="backgroundColor" systemColor="systemIndigoColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="x80-eM-n4v"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="I0f-Ai-Pu6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3516" y="119"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="uiX-H1-vYk">
@@ -200,6 +228,9 @@
         </systemColor>
         <systemColor name="systemGray2Color">
             <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemIndigoColor">
+            <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemYellowColor">
             <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
